prometheus-grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: production
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.staging.example.org`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    secretName: example-org-tls
